sts-jira.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jira
  namespace: devops
  labels:
    service: jira
spec:
  serviceName: jira
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      service: jira
  template:
    metadata:
      labels:
        service: jira
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: service
                    operator: In
                    values:
                      - jira
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: jira
          image: docker.io/alvistack/jira:8.8
          resources:
            requests:
              cpu: 500m
              memory: 3072M
            limits:
              memory: 3072M
          ports:
            - containerPort: 8005
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            failureThreshold: 30
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 300
            failureThreshold: 30
          volumeMounts:
            - mountPath: /var/atlassian/application-data/jira
              name: var-atlassian-application-data-jira
            - mountPath: /var/atlassian/application-data/jira/shared
              name: var-atlassian-application-data-jira-shared
      volumes:
        - name: var-atlassian-application-data-jira
          persistentVolumeClaim:
            claimName: var-atlassian-application-data-jira
        - name: var-atlassian-application-data-jira-shared
          persistentVolumeClaim:
            claimName: var-atlassian-application-data-jira-shared
