svc-httpd-cluster.yml
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-cluster
  namespace: devops
  labels:
    service: httpd
spec:
  ports:
    - name: http
      port: 80
  selector:
    service: httpd
  sessionAffinity: ClientIP
